<resources>
    <string name="app_name">Flats4us</string>
    <string name="witaj_ponownie">Witaj ponownie</string>
    <string name="nazwa_email_com">nazwa@email.com</string>
    <string name="email">Email</string>
    <string name="password_hint">*******</string>
    <string name="password">Hasło</string>
    <string name="title_activity_offer_detail">OfferDetailActivity</string>
    <string name="city_street_format">%1$s %2$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register">Zarejestruj się</string>
    <string name="name">Imie</string>
    <string name="surname">Nazwisko</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="forgot_your_password">Zapomniałeś hasło?</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="currency">zł</string>
    <string name="unit">m²</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="empty">Empty</string>
    <string name="calendar">Kalendarz</string>
    <string name="previous_short">prev</string>
    <string name="example_of_month">Feb 2021</string>
    <string name="sunday_short">SUN</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THUR</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="filter_offers">Filtruj oferty</string>
    <string name="location">Lokalizacja</string>
    <string name="location_with_colon">Lokalizacja:</string>
    <string name="price">Cena</string>
    <string name="min_price">Cena minimalna</string>
    <string name="max_price">Cena maksymalna</string>
    <string name="size">Cena Powierzchnia</string>
    <string name="min_size">Powierzchnia minimalna</string>
    <string name="max_size">Powierzchnia maksymalna</string>
    <string name="rooms">Liczba pokoi</string>
    <string name="rooms_hint">2</string>
    <string name="floor">Piętro</string>
    <string name="residents">Liczba mieszkańców</string>
    <string name="from">Od</string>
    <string name="to">Do</string>
    <string name="filter">Filtruj</string>
    <string name="clear">Wyczyść</string>
    <string name="hour">Godzina:</string>
    <string name="place">Miejsce:</string>
    <string name="reason">Powód:</string>
    <string name="owner">Właściciel:</string>
    <string name="issue_date">Data wystawienia:</string>
    <string name="monthly_price">zł/msc</string>
    <string name="offer_details">Szczegóły oferty</string>
    <string name="address">Adres:</string>
    <string name="area">Metraż</string>
    <string name="period">Okres wynajęcia</string>
    <string name="years"> lata</string>
    <string name="max_residents">Max liczba mieszkańców</string>
    <string name="equipment">Wyposażenie</string>
    <string name="equipment_with_colon">Wyposażenie:</string>
    <string name="description">Opis</string>
    <string name="interested_people">Zainteresowani</string>
    <string name="chat">Napisz</string>
    <string name="rent">Wynajmij</string>
    <string name="owner_survey">Ankieta właściciela</string>
    <string name="student_survey">Ankieta studenta</string>
    <string name="send">Wyślij</string>
    <string name="name_example">Jan</string>
    <string name="surname_example">Kowalski</string>
    <string name="mail_example">jan.kowalski@gmail.com</string>
    <string name="start">Strona główna</string>
    <string name="observed">Obserwowane</string>
    <string name="map">Mapa ofert</string>
    <string name="last_viewed">Ostatnio oglądane</string>
    <string name="messages">Wiadomości</string>
    <string name="profile">Konto</string>
    <string name="reviews">Opinie</string>
    <string name="settings">Ustawienia</string>
    <string name="payment">Płatności</string>
    <string name="payment_history">Historia płatności</string>
    <string name="payment_methods">Metody płatności</string>
    <string name="fee">Opłaty</string>
    <string name="my_rentals">Moje najmy</string>
    <string name="roommates">Współlokatorzy</string>
    <string name="contact">Kontakt</string>
    <string name="logout">Wyloguj się</string>
    <string name="conflicts">Spory</string>
    <string name="example">Example</string>
    <string name="min_floor">Liczba pięter</string>
    <string name="logo">logo</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="FilteringAndSorting">Filtrowanie i sortowanie</string>
    <string name="add_offer">Dodaj ofertę</string>
    <string name="choose_property">Wybierz nieruchomość</string>
    <string name="add_real_estate">Utwórz nieruchomość</string>
    <string name="voivodeship">Województwo</string>
    <string name="real_estate_type">Rodzaj nieruchomości</string>
    <string name="city">Miasto</string>
    <string name="district">Dzielnica</string>
    <string name="street">Ulica</string>
    <string name="building_number">Numer budynku</string>
    <string name="property_type">Rodzaj nieruchomości</string>
    <string name="next_button">Następny</string>
    <string name="creating_area">Powierzchnia</string>
    <string name="creating_max_residents">Maksymalna liczba mieszkańców</string>
    <string name="construction_year">Lata budowy</string>
    <string name="number_of_rooms">Liczba pokoi</string>
    <string name="number_of_floors">Liczba pięter</string>
    <string name="creating_equipment">Wyposażenie</string>
    <string name="prev_button">Poprzedni</string>
    <string name="add_photos">Dodaj zdjęcia</string>
    <string name="reset">Zresetuj</string>
    <string name="add_rules">Dodaj regulamin</string>
    <string name="month">msc</string>
    <string name="rules_warning">Nie dodano regulaminu, albo plik jest pusty!</string>
    <string name="cancel">Anuluj</string>
    <string name="add">Dodaj</string>
    <string name="report_issue">Zgłoś nam problem</string>
    <string name="required_what_it_concerns">Czego dotyczy:*</string>
    <string name="issue_with_app">Problem z aplikacją</string>
    <string name="issue_with_payment">Problem z płatnością</string>
    <string name="issue_with_profile">Problem z profilem</string>
    <string name="other">Inne</string>
    <string name="required_issue_description">Opis problemu</string>
    <string name="report">Zgłoś</string>
    <string name="report_next_issue">Zgłoś kolejny problem</string>
    <string name="no_option_selected">Nie wybrano żadnej opcji</string>
    <string name="last_viewed_offers">Ostatnio oglądane oferty</string>
    <string name="choose_an_option">Wybierz opcję</string>
    <string name="flat_number">Numer mieszkania</string>
    <string name="land_area">Powierzchnia działki</string>
    <string name="no_photo_selected">Nie wybrano żadnego zdjęcia</string>
    <string name="required_voivodeship">Województwo*</string>
    <string name="required_real_estate_type">Rodzaj nieruchomości*</string>
    <string name="required_city">Miasto*</string>
    <string name="required_district">Dzielnica*</string>
    <string name="required_street">Ulica*</string>
    <string name="required_building_number">Numer budynku*</string>
    <string name="required_property_type">Rodzaj nieruchomości*</string>
    <string name="required_creating_area">Powierzchnia*</string>
    <string name="required_creating_max_residents">Maksymalna liczba mieszkańców*</string>
    <string name="required_construction_year">Lata budowy*</string>
    <string name="required_number_of_rooms">Liczba pokoi*</string>
    <string name="required_number_of_floors">Liczba pięter*</string>
    <string name="required_creating_equipment">Wyposażenie*</string>
    <string name="required_flat_number">Numer mieszkania*</string>
    <string name="required_land_area">Powierzchnia działki*</string>
    <string name="required_floor">Piętro*</string>
    <string name="student">Student</string>
    <string name="owner_type">Właściciel</string>
    <string name="student_type">Student</string>
    <string name="nothing_selected">Nic nie wybrano!</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="required_surname">Nazwisko*</string>
    <string name="required_name">Imię*</string>
    <string name="required_phone_number">Numer telefonu*</string>
    <string name="required_postal_code">Kod pocztowy*</string>
    <string name="personal_data">Dane osobowe</string>
    <string name="required_birth_date">Data urodzenia*</string>
    <string name="birth_date">Data urodzenia</string>
    <string name="required_university">Uczelnia*</string>
    <string name="university">Uczelnia</string>
    <string name="required_student_number">Numer studemta*</string>
    <string name="student_number">Numer studenta</string>
    <string name="required_bank_account">Numer konta bankowego*</string>
    <string name="bank_account">Numer konta</string>
    <string name="owner_data">Dane właściciela</string>
    <string name="student_data">Dane studenta</string>
    <string name="log_in_data">Dane logowania</string>
    <string name="required_document_number">Numer dokumentu*</string>
    <string name="document_number">Numer dokumentu</string>
    <string name="document_expire_date">Data ważności dokumentu</string>
    <string name="required_document_expired_date">Data ważności dokumentu*</string>
    <string name="document_type">Typ dokumentu</string>
    <string name="required_email">Email*</string>
    <string name="required_password">Hasło*</string>
    <string name="required_repeat_password">Powtórz hasło*</string>
    <string name="required_rental_date">Data wynajmu*</string>
    <string name="link">Link</string>
    <string name="required_rental_period">Okres wynajmu*</string>
    <string name="roommates_email">Email współlokatorów</string>
    <string name="notification">Powiadomienia</string>
    <string name="payment_method">Metoda płatności</string>
    <string name="choose_payment_method">Wybierz metodę płatności</string>
    <string name="pay">Zapłać</string>
    <string name="end_date">Data zakończenia:</string>
    <string name="my_properties">Moje nieruchomości</string>
    <string name="update_real_estate">Zaktualizuj nieruchomość</string>
    <string name="not_loggedin">Nie zalogowany</string>
    <string name="my_offers">Moje oferty</string>
    <string name="deposit">Kaucja</string>
    <string name="add_title_deed">Dodaj akt własności</string>
    <string name="meet">Umów spoktanie</string>
    <string name="create_argument">Utwórz spór</string>
    <string name="add_opinion">Wystaw opinię</string>
    <string name="related_offer">Powiązana oferta</string>
</resources>