<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_start"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/start"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/messages"/>

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/map"/>

    <item
        android:id="@+id/nav_my_rentals"
        android:icon="@drawable/baseline_home_work_24"
        android:title="@string/my_rentals"/>


    <item
        android:id="@+id/nav_my_offers"
        android:icon="@drawable/baseline_home_work_24"
        android:title="@string/my_offers"/>

    <item
        android:id="@+id/nav_my_properties"
        android:icon="@drawable/baseline_home_work_24"
        android:title="@string/my_properties"/>

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar"/>

    <item
        android:id="@+id/nav_conflicts"
        android:icon="@drawable/baseline_feedback_24"
        android:title="@string/conflicts"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/nav_report_issue"
        android:icon="@drawable/baseline_report_problem_24"
        android:title="@string/report_issue"/>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"/>

</menu>