<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_start"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/start"/>

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/map"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/baseline_phone_24"
        android:title="@string/contact"/>

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/login"/>

</menu>