<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    android:padding="@dimen/app_padding"
    tools:context=".ui.CalendarFragment">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/calendar"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_calendar_padding"
        android:background="@drawable/rectangle_white_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_view_inside_header_margin_top">

            <ImageButton
                android:id="@+id/prevButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_button_min_height"
                android:layout_weight="1"
                android:contentDescription="@string/previous_short"
                android:textColor="@color/black"
                android:background="@null"
                android:textStyle="bold"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/example_of_month"
                android:textSize="@dimen/text_view_calendar_header_size"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_button_min_height"
                android:layout_weight="1"
                android:contentDescription="@string/next"
                android:textColor="@color/black"
                android:background="@null"
                android:textStyle="bold"
                android:src="@drawable/baseline_arrow_forward_24"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday_short"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_view_week_day_size"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_view_calendar_height"
            android:layout_marginBottom="@dimen/horizontal_space"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/meetingFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_vertical_margin"/>

</LinearLayout>