<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_sheet">

    <TextView
        android:id="@+id/addArgumentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_argument"
        android:drawablePadding="@dimen/text_view_menu_margin_start"
        android:padding="@dimen/layout_menu_item_padding"
        android:textSize="@dimen/text_view_menu_text_size"
        app:drawableStartCompat="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/addOpinionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_opinion"
        android:drawablePadding="@dimen/text_view_menu_margin_start"
        android:padding="@dimen/layout_menu_item_padding"
        android:textSize="@dimen/text_view_menu_text_size"
        app:drawableStartCompat="@drawable/list_24" />

    <TextView
        android:id="@+id/relatedOfferButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/related_offer"
        android:drawablePadding="@dimen/text_view_menu_margin_start"
        android:padding="@dimen/layout_menu_item_padding"
        android:textSize="@dimen/text_view_menu_text_size"
        app:drawableStartCompat="@drawable/baseline_home_work_24" />

    <TextView
        android:id="@+id/meetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meet"
        android:drawablePadding="@dimen/text_view_menu_margin_start"
        android:padding="@dimen/layout_menu_item_padding"
        android:textSize="@dimen/text_view_menu_text_size"
        app:drawableLeftCompat="@drawable/baseline_calendar_month_24" />

</LinearLayout>