<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.ITIssueReportFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/report_issue"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/required_what_it_concerns"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_option_selected"
                android:textColor="@color/red"
                android:textSize="@dimen/regular_text_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_with_edit_text_horizontal_margin"
                android:layout_marginEnd="@dimen/layout_with_edit_text_horizontal_margin">

                <RadioButton
                    android:id="@+id/app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_with_app"
                    android:textSize="@dimen/regular_text_size" />

                <RadioButton
                    android:id="@+id/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_with_payment"
                    android:textSize="@dimen/regular_text_size" />

                <RadioButton
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_with_profile"
                    android:textSize="@dimen/regular_text_size" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="@dimen/regular_text_size" />

            </RadioGroup>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_with_edit_text_horizontal_margin"
                android:layout_marginEnd="@dimen/layout_with_edit_text_horizontal_margin">

                <LinearLayout
                    android:id="@+id/layoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_register_margin_top"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_description_height"
                        android:layout_marginStart="@dimen/edit_text_horizontal_margin"
                        android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
                        android:background="@null"
                        android:hint="@string/description"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLength="512"
                        android:minLines="9"
                        android:textSize="@dimen/edit_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_name_margin_vertical"
                    android:background="@color/white"
                    android:paddingStart="@dimen/layout_name_padding_vertical"
                    android:paddingEnd="@dimen/layout_name_padding_vertical"
                    android:text="@string/required_issue_description"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_cancel_24"
            android:drawablePadding="10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_add_24"
            android:drawablePadding="10dp"
            android:text="@string/report"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
